Fixing z-indexes of location suggestion

--- a/css/main.css
+++ b/css/main.css
@@ -229,20 +229,21 @@
   -webkit-box-shadow: inset 0 1px 4px #cccccc;
   -moz-box-shadow: inset 0 1px 4px #cccccc;
   box-shadow: inset 0 1px 4px #cccccc;
+  z-index: 4;
 }
-/* line 22, ../sass/components/_map.sass */
+/* line 23, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch a:hover {
   background-color: white;
 }
-/* line 25, ../sass/components/_map.sass */
+/* line 26, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch form.displayNone {
   display: block;
 }
-/* line 28, ../sass/components/_map.sass */
+/* line 29, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch form {
   background: transparent;
 }
-/* line 31, ../sass/components/_map.sass */
+/* line 32, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch form input {
   height: 26px;
   margin-top: 2px;
@@ -252,38 +253,38 @@
   margin-right: 10px;
   width: 90%;
 }
-/* line 40, ../sass/components/_map.sass */
+/* line 41, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch .leaflet-geosearch-autocomplete {
   position: absolute;
 }
-/* line 43, ../sass/components/_map.sass */
+/* line 44, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch .leaflet-geosearch-message {
   top: 38px;
 }
-/* line 46, ../sass/components/_map.sass */
+/* line 47, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch a.leaflet-bar-part {
   top: 6px;
 }
-/* line 50, ../sass/components/_map.sass */
+/* line 51, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left div.leaflet-control-geosearch #leaflet-control-geosearch-submit i {
   margin: 0;
 }
-/* line 53, ../sass/components/_map.sass */
+/* line 54, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left .leaflet-control-locate {
   clear: none;
 }
-/* line 56, ../sass/components/_map.sass */
+/* line 57, ../sass/components/_map.sass */
 .leaflet-top.leaflet-left .leaflet-control-zoom {
   position: absolute;
   left: -45px;
 }
 
-/* line 61, ../sass/components/_map.sass */
+/* line 62, ../sass/components/_map.sass */
 .leaflet-container {
   font-family: "open-sans", sans-serif;
   font-size: 14px;
 }
-/* line 65, ../sass/components/_map.sass */
+/* line 66, ../sass/components/_map.sass */
 .leaflet-container .leaflet-popup-content-wrapper {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -291,11 +292,11 @@
   -o-border-radius: 0;
   border-radius: 0;
 }
-/* line 69, ../sass/components/_map.sass */
+/* line 70, ../sass/components/_map.sass */
 .leaflet-container .leaflet-popup-content-wrapper .fields .title {
   width: 4.5em;
 }
-/* line 72, ../sass/components/_map.sass */
+/* line 73, ../sass/components/_map.sass */
 .leaflet-container .leaflet-popup-content-wrapper .fields .value {
   margin-left: 5.5em;
 }
