--- a/sass/components/_map.sass
+++ b/sass/components/_map.sass
@@ -18,6 +18,7 @@
     height: 38px
     border: 1px solid $orange !important
     +box-shadow(inset 0 1px 4px $grey)
+    z-index: 4
 
     a:hover
       background-color: $white
